fix shoppingbag visibility

--- a/src/components/Shoppingbag/Shoppingbag.css
+++ b/src/components/Shoppingbag/Shoppingbag.css
@@ -99,3 +99,7 @@
   width: 100%;
   border-radius: 0;
 }
+
+.empty-bag-text{
+    text-align: center;
+}
